--- a/lesson 70/lesson 70.vcxproj
+++ b/lesson 70/lesson 70.vcxproj
@@ -130,11 +130,13 @@
     <ClCompile Include="Figure.cpp" />
     <ClCompile Include="FigureEditor.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Figure.h" />
     <ClInclude Include="FigureEditor.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="Triangle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
