--- a/lesson 70/lesson 70.vcxproj
+++ b/lesson 70/lesson 70.vcxproj
@@ -127,12 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Circle.cpp" />
     <ClCompile Include="Figure.cpp" />
     <ClCompile Include="FigureEditor.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Circle.h" />
     <ClInclude Include="Figure.h" />
     <ClInclude Include="FigureEditor.h" />
     <ClInclude Include="main.h" />
